# igraph-wasm

./: .gitignore  CMakeLists.txt  CMakeLists_dist.txt  README.md  build.sh
.github/workflows/: build.yaml
